New functional added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.error.whitelabel.enabled=false
 
+upload.path = /D:/Projects/NexusBlog/nexusblog/uploads
+
 #Needed to initialize DB with data.sql
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
