User registration verification by email added. Auto authentication after successful verification added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ server.error.whitelabel.enabled=false
 
 upload.path = /D:/Projects/NexusBlog/nexusblog/uploads
 
-#Needed to initialize DB with data.sql
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nnexusblog@gmail.com
+spring.mail.password=vpzxdlzilfdwffki
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+mail.debug=true
+
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
