--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.error.whitelabel.enabled=false
 
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.template-resolver-order=0
+
 upload.path = /D:/Projects/NexusBlog/nexusblog/uploads
 
 spring.mail.host=smtp.gmail.com
