--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/nexusblog
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.error.whitelabel.enabled=false
+
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
@@ -24,6 +27,3 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 mail.debug=true
-
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
